formulario de inicio de sesión

--- a/bancoapp/web/index.html
+++ b/bancoapp/web/index.html
@@ -5,15 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banco AGUILA REAL</title>
-    <link rel="stylesheet" href="style.css" href="{{url_for('static', filename='style.css')}}">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
     <header>
-        <h1>AGUILA REAL</h1>
+        <h1>Bienvenidoa a la Web de AGUILA REAL su banco de confianza</h1>
     </header>
-    <main></main>
+    <main>
+        <h4>Necesita iniciar sesión para continuar...</h4>
+        <h6>Si no tiene una cuenta haga click en resgistrarse</h6>
+<form action=""> 
+    <laberl for="">Usuario</laberl>
+    <input type="text" placeholder="Ingrese su usuario" name="Usuario">
+    <laberl for="">Contraseña</laberl>
+    <input type="password" placeholder="Ingrese su contraseña" name="Contraseña">
+
+    <input type="button" value="Ingresar">
+</form>
+        
+    </main>
     <footer>
         <h5>BANCO AGUILA REAL &#xA9; </h5>
         <p>Un institución bancaria que es solo para esta GUI</p>
