Movimiento de páginas

--- a/bancoapp/web/index.html
+++ b/bancoapp/web/index.html
@@ -11,23 +11,30 @@
 
 <body>
     <header>
-        <h1>Bienvenidoa a la Web de AGUILA REAL su banco de confianza</h1>
+        <h1>Banco AGUILA REAL</h1>
+        <nav>
+            <a href="index.html">Inicio</a>
+            <a href="servicios.html">Servicios</a>
+            <a href="contactos.html">Contacto</a>
+            <a href="contactos.html">Ayuda</a>
+        </nav>
     </header>
     <main>
+        <h1>Bienvenido a la Web de <strong>AGUILA REAL </strong> su banco de confianza</h1>
         <h4>Necesita iniciar sesión para continuar...</h4>
-        <h6>Si no tiene una cuenta haga click en resgistrarse</h6>
-<form action=""> 
-    <laberl for="">Usuario</laberl>
-    <input type="text" placeholder="Ingrese su usuario" name="Usuario">
-    <laberl for="">Contraseña</laberl>
-    <input type="password" placeholder="Ingrese su contraseña" name="Contraseña">
 
-    <input type="button" value="Ingresar">
-</form>
-        
+        <form action="">
+            <laberl for="">Usuario</laberl>
+            <input type="text" placeholder="Ingrese su usuario" name="Usuario">
+            <laberl for="">Contraseña</laberl>
+            <input type="password" placeholder="Ingrese su contraseña" name="Contraseña">
+
+            <input type="button" value="Ingresar">
+        </form>
+        <h6><a href="#">Si no tiene una cuenta haga click en resgistrarse</a></h6>
     </main>
     <footer>
-        <h5>BANCO AGUILA REAL &#xA9; </h5>
+        <h5>BANCO AGUILA REAL &#xA9 </h5>
         <p>Un institución bancaria que es solo para esta GUI</p>
     </footer>
 
