--- a/bancoapp/web/cartera.html
+++ b/bancoapp/web/cartera.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cartera de clientes</title>
+    <link rel="icon" href="descarga.ico" type="image/x-icon">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,15 +15,20 @@
 
         h2 {
             color: #333;
+            text-align: center;
         }
 
         h5 {
+            text-align: center;
             color: #555;
         }
 
         img {
+            display: block;
             border-radius: 8px;
             margin-bottom: 10px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         p {
@@ -43,7 +49,7 @@
     <h5>Yang Wonyoung</h5>
     <img src="https://th.bing.com/th/id/OIP.FM09xeZxdvNnzWVm1uIGgwHaM3?rs=1&pid=ImgDetMain" alt="wonyoung" width="100"
         height="180">
-    <p>Famosa empresaria y modelo con múltiples inversiones en la bolsa de AGUILA REAL</p>
+    <p>Famosa empresaria y modelo con múltiples inversiones en la bolsa de <b>AGUILA REAL &#xA9</b></p>
 </body>
 
 </html>
