--- a/bancoapp/web/contactos.html
+++ b/bancoapp/web/contactos.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contactos</title>
+    <link rel="icon" href="descarga.ico" type="image/x-icon">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,6 +15,7 @@
         }
 
         h1 {
+            text-align: center;
             color: #333;
         }
 
