--- a/bancoapp/web/inversión.html
+++ b/bancoapp/web/inversión.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inversión</title>
+    <link rel="icon" href="descarga.ico" type="image/x-icon">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,10 +15,12 @@
         }
 
         h1 {
+            text-align: center;
             color: #333;
         }
 
         p {
+            text-align: center;
             color: #555;
         }
 
@@ -42,7 +45,7 @@
         }
 
         a:visited {
-            color: rgb(255, 255, 255);
+            color: rgb(173, 91, 9);
         }
     </style>
 </head>
@@ -52,20 +55,20 @@
     <p>Les proporcionamos la información más trasnparente <br> acerca de sus inversiones y dinero</p>
     <iframe src="https://gifer.com/embed/7TrU" width=480 height=304.762 frameBorder="0" allowFullScreen></iframe></p>
     <h6>Si desea invertir <a href="contactos.html">contactenos</a></h6>
+    <p>Con nuestro programa <i>Inversión Inteligente</i> puedes invertir hasta más de 1,000,000 de USD</p>
+    <iframe src="https://gifer.com/embed/7TrU" width=480 height=304.762 frameBorder="0" allowFullScreen></iframe></p>
 
-    <h1>Prestamos</h1>
-    <img src="https://th.bing.com/th/id/OIP.umRLuuPfiCXJ27T0RQmGwAHaEF?rs=1&pid=ImgDetMain" alt="Prestamos">
-    <p>Dinero de inmediato a solo un <a href="contactos.html">contacto</a></p>
-    <h1>Ahorro</h1>
-    <img src="https://cdn2.dineroenimagen.com/media/dinero/styles/gallerie/public/images/2022/09/ahorro-afores.jpg"
-        alt="Alcancia" width="300" height="200">
-    <p>Con nuestro porgrama <i>Cochinito Ahorrador</i> puedes ahorrar hasta más de 1,000,000 de USD</p>
-    <h1>Tarjetas</h1>
-    <img src="https://www.elnuevoherald.com/noticias/florida/sur-de-la-florida/8fxc53/picture38179908/alternates/LANDSCAPE_1140/ThinkstockPhotos-481055153.jpg"
-        alt="tarjeta de crédito" width="300" height="200">
-    <aside>
-        <p>Con la tarjeta <i>Cherry Bullet</i> sus inversiones crecen un 20% <a href="#">anualmente</a></p>
-    </aside>
+    <table>
+        <tr>
+            <h5><a href="prestamos.html">Prestamos</a></h5>
+            <h5><a href="servicios.html">Servicios</a></h5>
+            <h5><a href="tarjetas.html">Tarjetas</a></h5>
+            <h5><a href="cartera.html">Cartera de clientes</a></h5>
+            <h5><a href="servicios.html">Inicio</a></h5>
+        </tr>
+
+    </table>
+
 </body>
 
 </html>
