--- a/bancoapp/web/servicios.html
+++ b/bancoapp/web/servicios.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios</title>
+    <link rel="icon" href="descarga.ico" type="image/x-icon">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,7 +15,8 @@
         }
 
         h1 {
-            color: #333;
+            text-align: center;
+            color: hsl(0, 0%, 20%);
         }
 
         nav {
@@ -35,7 +37,7 @@
         }
 
         a {
-            color: #007BFF;
+            color: #470256;
             text-decoration: none;
         }
 
@@ -68,11 +70,13 @@
     <article>
         <h2>Servicios</h2>
         <p>En esta sección se mostrarán los servicios que ofrece la institución bancaria.</p>
-        <ul>
-            <li><a href="inversión.html">Inversiones, Préstamos,Ahorros,Tarjetas de crédito <h4>Todo en un solo lugar
-                    </h4></a></li>
+        <nav>
+            <a href="inversión.html">Inversiones</a>
+            <a href="prestamos.html">Prestamos</a>
+            <a href="ahorro.html">Ahorro</a>
+            <a href="tarjetas.html">Tarjetas </a>
 
-        </ul>
+        </nav>
         <p>Para más información sobre nuestros servicios, por favor <a href="contactos.html">contáctenos.</a></p>
 </body>
 
