--- a/bancoapp/web/index.html
+++ b/bancoapp/web/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banco AGUILA REAL</title>
     <link rel="stylesheet" href="style.css">
-
+    <link rel="icon" href="descarga.ico" type="image/x-icon">
 </head>
 
 <body>
