Cambiando su interface

--- a/bancoapp/web/index.html
+++ b/bancoapp/web/index.html
@@ -32,9 +32,8 @@
 
             <input type="button" value="Ingresar" onclick="location.href='home.html'">
             <input type="button" value="Olvide mi contraseña" onclick="location.href='recuperar.html'">
-            <input type="button" value="Registrarse" onclick="location.href='registrar.html'">
         </form>
-        <h6><a href="#">Si no tiene una cuenta haga click en resgistrarse</a></h6>
+        <h6>Si no tiene una cuenta haga click en <a href="registrar.html">resgistrarse</a></h6>
     </main>
     <footer>
         <h5>BANCO AGUILA REAL &#xA9 </h5>
