Fórmulario para recuperar contraseña

--- a/bancoapp/web/recuperar.html
+++ b/bancoapp/web/recuperar.html
@@ -5,10 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recuperar contraseña</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
+    <header>Bienvenido a su recuperador de contraseñas</header>
 <body>
-
+    <p>Nos ha solicitado el cambio de su conraseña y como política de la Empresa AGUILA DE MÉXICO &#xA9 <b>
+        siempre estamos al pendiente de su seguridad cuando usa nuestros servicios
+    </b></p>
+    <h3>Por favor llene los siguientes campos para que un accesor se comunique en la brevedad con usted</h3>
+    
+        <form action="">
+            <label for="">Usuario</label>
+            <input type="text" placeholder="Ingrese su usuario" name="Usuario">
+            <label for="">Número de teléfono</label>            
+            <input type="tel" placeholder="Ingrese su número de teléfono" name="Telefono">
+            <input type="button" value="Recuperar contraseña" onclick="location.href='#'">
+        </form>
 </body>
 
 </html>
