--- a/bancoapp/web/inversión.html
+++ b/bancoapp/web/inversión.html
@@ -47,6 +47,15 @@
         a:visited {
             color: rgb(173, 91, 9);
         }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+            background-color: rgb(68, 231, 177);
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            height: 20px;
+        }
     </style>
 </head>
 
@@ -56,15 +65,16 @@
     <iframe src="https://gifer.com/embed/7TrU" width=480 height=304.762 frameBorder="0" allowFullScreen></iframe></p>
     <h6>Si desea invertir <a href="contactos.html">contactenos</a></h6>
     <p>Con nuestro programa <i>Inversión Inteligente</i> puedes invertir hasta más de 1,000,000 de USD</p>
+    <input type="button" value="Invertir" onclick="location.href='home.html'">
     <iframe src="https://gifer.com/embed/7TrU" width=480 height=304.762 frameBorder="0" allowFullScreen></iframe></p>
 
     <table>
         <tr>
-            <h5><a href="prestamos.html">Prestamos</a></h5>
-            <h5><a href="servicios.html">Servicios</a></h5>
-            <h5><a href="tarjetas.html">Tarjetas</a></h5>
-            <h5><a href="cartera.html">Cartera de clientes</a></h5>
-            <h5><a href="servicios.html">Inicio</a></h5>
+            <th><a href="prestamos.html">Prestamos</a></th>
+            <th><a href="servicios.html">Servicios</a></th>
+            <th><a href="tarjetas.html">Tarjetas</a></th>
+            <th><a href="cartera.html">Cartera de clientes</a></th>
+            <th><a href="servicios.html">Inicio</a></th>
         </tr>
 
     </table>
