--- a/bancoapp/web/registrar.html
+++ b/bancoapp/web/registrar.html
@@ -6,21 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="descarga.ico" type="image/x-icon">
 </head>
-    <header>Registrar su cuenta </header>
+<header>Registrar su cuenta </header>
 
 <body>
     <form action="">
-            <label for="">Usuario</label>
-            <input type="text" placeholder="Ingrese su usuario" name="Usuario">
-            <label for="">Contraseña</label>
-            <input type="password" placeholder="Ingrese su contraseña" name="Contraseña">
-            <input type="password" placeholder="Corroboré su contraseña" name="Contraseña>
+        <label for="">Usuario</label>
+        <input type="text" placeholder="Ingrese su usuario" name="Usuario">
+        <label for="">Contraseña</label>
+        <input type="password" placeholder="Ingrese su contraseña" name="Contraseña">
+        <input type="password" placeholder="Corroboré su contraseña" name="Contraseña>
             <label for="">Correo</label>
-            <input type="email" palaceholder="Ingrese su correo electrónico" name="Correo">
-            <input type="button" value="Registrar" onclick="location.href='registrar.html'">
-            <p>En breve le mandaremos un correo para agendar su cita</p>
-        </form>
+            <input type=" email" palaceholder="Ingrese su correo electrónico" name="Correo">
+        <input type="button" value="Registrar" onclick="location.href='registrar.html'">
+        <p>En breve le mandaremos un correo para agendar su cita</p>
+    </form>
 
 
 </body>
