--- a/bancoapp/web/cartera.html
+++ b/bancoapp/web/cartera.html
@@ -24,7 +24,7 @@
         }
 
         img {
-            display: block;
+            float: left;
             border-radius: 8px;
             margin-bottom: 10px;
             margin-left: auto;
@@ -41,15 +41,20 @@
     <h2>Nuestros clientes más destacados</h2>
     <p>En esta sección se mostrará la cartera de clientes más destacados de la institución bancaria.</p>
 
-    <h5>Empresas Chanat</h5>
+    <h5>Empresas Chanat &#xA9</h5>
     <img src="https://img.freepik.com/fotos-premium/arquitectura-corporativa-moderna-puede-ver-edificios-oficinas-paisaje-urbano_410516-276.jpg?w=2000"
         alt="Empresas Chanat" width="200" height="100">
     <p>Empresas Chanat es una empresa dedicada a la producción y comercialización de productos alimenticios.</p>
 
-    <h5>Yang Wonyoung</h5>
+    <h5>Jang Wonyoung</h5>
     <img src="https://th.bing.com/th/id/OIP.FM09xeZxdvNnzWVm1uIGgwHaM3?rs=1&pid=ImgDetMain" alt="wonyoung" width="100"
         height="180">
     <p>Famosa empresaria y modelo con múltiples inversiones en la bolsa de <b>AGUILA REAL &#xA9</b></p>
+
+    <h5>Empresas Mahawan &#xA9</h5>
+    <img src="https://www.pexels.com/es-es/foto/edificio-blanco-15120-269077/" alt="empresa" width="200" height="100">
+    <p>Una empresa dedicada al turismo y a la hoteleria</p>
+
 </body>
 
 </html>
