Ya van mejor las páginas

--- a/bancoapp/web/cartera.html
+++ b/bancoapp/web/cartera.html
@@ -23,13 +23,9 @@
             color: #555;
         }
 
-        img {
-            float: left;
-            border-radius: 8px;
-            margin-bottom: 10px;
-            margin-left: auto;
-            margin-right: auto;
-        }
+        /*img {
+          
+        }*/
 
         p {
             color: #666;
@@ -43,17 +39,53 @@
 
     <h5>Empresas Chanat &#xA9</h5>
     <img src="https://img.freepik.com/fotos-premium/arquitectura-corporativa-moderna-puede-ver-edificios-oficinas-paisaje-urbano_410516-276.jpg?w=2000"
-        alt="Empresas Chanat" width="200" height="100">
-    <p>Empresas Chanat es una empresa dedicada a la producción y comercialización de productos alimenticios.</p>
+        alt="Empresas Chanat" width="450" height="300">
+    <p>Empresas Chanat &#xA9 es una empresa dedicada a la producción y comercialización de productos alimenticios.</p>
+    <p>Chanat &#xA9, reconocida empresa del sector alimentario, ha establecido una alianza estratégica con Banco Águila
+        Real &#xA9, fortaleciendo así su capacidad operativa y de expansión en el mercado. Esta colaboración permite a
+        Chanat &#xA9 acceder a financiamiento preferencial, facilitando la adquisición de insumos y la modernización de
+        sus procesos productivos.
+
+        Banco Águila Real &#xA9, por su parte, se beneficia al diversificar su cartera de clientes en el ámbito
+        alimentario, y posiciona su imagen como un aliado clave para empresas comprometidas con la calidad y la
+        innovación.
+
+        La sinergia creada entre ambas instituciones promoverá la implementación de prácticas sostenibles en la
+        producción de alimentos, así como el desarrollo de nuevos productos que respondan a las necesidades del
+        consumidor actual. Esta asociación no solo busca incrementar la rentabilidad de Chanat&#xA9, sino también
+        aportar al desarrollo económico de la región al generar empleo y fomentar el consumo local.</p>
 
     <h5>Jang Wonyoung</h5>
-    <img src="https://th.bing.com/th/id/OIP.FM09xeZxdvNnzWVm1uIGgwHaM3?rs=1&pid=ImgDetMain" alt="wonyoung" width="100"
-        height="180">
-    <p>Famosa empresaria y modelo con múltiples inversiones en la bolsa de <b>AGUILA REAL &#xA9</b></p>
+    <img src="https://th.bing.com/th/id/OIP.K0rKuRjGQblj4r7QjFwrEAHaEK?rs=1&pid=ImgDetMain" alt="wonyoung" width="480"
+        height="250">
+    <p>Famosa empresaria y modelo con múltiples inversiones en la bolsa de <b>ÁGUILA REAL &#xA9</b></p>
+    <p>Jang Woyoung es una destacada figura en el ámbito del entretenimiento, reconocida por su multifacética carrera
+        como modelo, cantante y actriz. Con una presencia carismática y un talento excepcional, ha logrado cautivar a
+        audiencias tanto en el mundo de la moda como en la música y el cine. Su dedicación y esfuerzo la han posicionado
+        como un ícono influyente en la industria, inspirando a jóvenes artistas a seguir sus pasos.
+
+        Además de su éxito en las artes, Woyoung ha demostrado ser una inversora astuta al colaborar con el Banco Águila
+        Real &#xa9 . Este banco, conocido por su enfoque innovador en el sector financiero, se beneficia de la
+        experiencia y visión de Woyoung. Su inversión no solo refleja su compromiso con el crecimiento económico, sino
+        que también subraya su capacidad para diversificar sus intereses profesionales, asegurando así un futuro
+        próspero tanto en el entretenimiento como en el mundo financiero.</p>
 
     <h5>Empresas Mahawan &#xA9</h5>
-    <img src="https://www.pexels.com/es-es/foto/edificio-blanco-15120-269077/" alt="empresa" width="200" height="100">
+    <img src="https://images.pexels.com/photos/16628628/pexels-photo-16628628/free-photo-of-ciudad-panorama-urbano-skyline-rascacielos.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+        alt="empresa" width="200" height="300">
     <p>Una empresa dedicada al turismo y a la hoteleria</p>
+    <p>La colaboración entre la empresa Mahawan &#xA9 y el Banco Águila Real &#xA9 representa una estrategia innovadora
+        en el ámbito del turismo y las finanzas. Mahawan &#xA9 , reconocida por su enfoque en la promoción de
+        experiencias turísticas únicas, se asocia con el Banco Águila Real &#xA9 para organizar ferias que no solo
+        atraen a turistas, sino que también fomentan el crecimiento económico de la región. Estas ferias ofrecen una
+        plataforma para exhibir ofertas locales, culturales y recreativas, en la que los visitantes pueden explorar
+        diversas opciones que enriquecen su experiencia.
+
+        A su vez, el Banco Águila Real &#xA9 brinda apoyo financiero y servicios adaptados a las necesidades de los
+        turistas y emprendedores participantes, lo que fortalece la competitividad del sector. Este vínculo simbiótico
+        permite a ambas entidades capitalizar sus fortalezas, al mismo tiempo que contribuyen al desarrollo sostenible
+        de la industria turística, generando un impacto positivo en la economía local y promoviendo un ecosistema
+        empresarial integrado y dinámico.</p>
 
 </body>
 
