--- a/bancoapp/web/index.html
+++ b/bancoapp/web/index.html
@@ -14,10 +14,18 @@
     <header>
         <h1>Banco AGUILA REAL</h1>
         <nav>
-            <a href="index.html">Inicio</a>
-            <a href="servicios.html">Servicios</a>
-            <a href="contactos.html">Contacto</a>
-            <a href="contactos.html">Ayuda</a>
+            <form action="" class="nav">
+                <label for="">Menú</label>
+                <input type="button" value="Inicio" onclick="location.href='index.html'">
+                <input type="button" value="Servicios" onclick="location.href='servicios.html'">
+                <input type="button" value="Ahorro" onclick="location.href='ahorro.html'">
+                <input type="button" value="Prestamos" onclick="location.href='prestamos.html'">
+                <input type="button" value="Inversiones" onclick="location.href='inversión.html'">
+                <input type="button" value="Tarjetas" onclick="location.href='tarjetas.html'">
+                <input type="button" value="Cartera de clientes" onclick="location.href='cartera.html'">
+                <input type="button" value="Contacto" onclick="location.href='contactos.html'">
+                <input type="button" value="Ayuda" onclick="location.href='contactos.html'">
+            </form>
         </nav>
     </header>
     <main>
