--- a/bancoapp/web/servicios.html
+++ b/bancoapp/web/servicios.html
@@ -42,15 +42,15 @@
         }
 
         a:hover {
-            color: brown;
+            color: rgb(215, 159, 39);
         }
 
         a:active {
-            color: red;
+            color: rgb(73, 94, 230);
         }
 
         a:visited {
-            color: rgb(74, 74, 152);
+            color: rgb(255, 255, 255);
         }
     </style>
 </head>
@@ -65,11 +65,25 @@
     </nav>
     <article>
         <p>Invitamos a nuestros clientes a un viaje por la comodidad, inversión y el mundo de las <br> finanzas
-            informandolos sobre todos los movimientos en la bolsa, con nostros sus inversiones son seguras</p>
+            informandolos sobre todos los movimientos en la bolsa, con nostros sus inversiones son seguras.</p>
     </article>
     <article>
         <h2>Servicios</h2>
-        <p>En esta sección se mostrarán los servicios que ofrece la institución bancaria.</p>
+        <div style="padding-top:75.000%;position:relative;">
+            <iframe src="https://gifer.com/embed/75ez" width="100%" height="100%" style='position:absolute;top:0;left:;'
+                frameBorder="0" allowFullScreen></iframe>
+        </div>
+        <a href="https://gifer.com"></a>
+        <p>En esta sección se mostrarán los servicios que ofrece la institución bancaria.
+            El Banco <i><b>Águila Real &#xA9</b></i> se distingue por ofrecer una gama excepcional de servicios
+            financieros. Entre sus principales opciones se encuentran inversiones con rendimientos competitivos,
+            préstamos flexibles adaptados a las necesidades del cliente, planes de ahorro con intereses preferenciales y
+            tarjetas que brindan beneficios exclusivos. Los clientes de <i><b>Águila Real &#xA9</b></i> disfrutan de
+            ofertas únicas, como tasas de interés reducidas y cashback en compras, lo que lo convierte en la mejor
+            elección del mercado. Además, su atención personalizada asegura que cada cliente reciba el asesoramiento
+            adecuado para maximizar sus finanzas.
+        <p>Escoger el <i><b>Banco Águila &#xA9</b></i> Real es optar por un futuro financiero brillante y seguro.</p>
+        </p>
         <nav>
             <a href="inversión.html">Inversiones</a>
             <a href="prestamos.html">Prestamos</a>
