--- a/bancoapp/web/prestamos.html
+++ b/bancoapp/web/prestamos.html
@@ -43,10 +43,12 @@
         }
 
         table {
+            box-shadow: #555 0px 0px 10px;
+            border-radius: 10px;
             width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
-            background-color: aquamarine;
+            background-color: rgb(37, 234, 169);
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
     </style>
@@ -56,6 +58,23 @@
     <h1>Prestamos</h1>
     <img src="https://th.bing.com/th/id/OIP.umRLuuPfiCXJ27T0RQmGwAHaEF?rs=1&pid=ImgDetMain" alt="Prestamos">
     <p>Dinero de inmediato a solo un <a href="contactos.html">contacto</a></p>
+    <p><i><b>Préstamos del Banco Águila Real: Oportunidades Financieras a Tasa Competitiva </b></i><br>
+
+        El Banco <b><i>Águila Real &#xA9 </b></i>se distingue en el sector financiero por ofrecer condiciones atractivas
+        en sus préstamos personales, hipotecarios y automotrices. Con tasas de interés que oscilan entre el 5% y el 10%,
+        el banco se posiciona como una opción preferente para aquellos que buscan financiar sus proyectos con la mejor
+        tasa del mercado.
+
+        Los préstamos personales son ideales para aquellos que necesitan liquidez inmediata, con un interés del 10%
+        aplicable a corto plazo. Para quienes están interesados en la adquisición de vivienda, el préstamo hipotecario
+        ofrece una tasa competitiva del 5%, permitiendo financiar la propiedad deseada a largo plazo de manera
+        accesible. Por su parte, los préstamos automotrices cuentan con un interés del 7%, facilitando la compra de
+        vehículos nuevos o usados a medio plazo.
+
+        Es relevante destacar que las tasas mencionadas son ejemplos representativos y pueden variar según las
+        condiciones específicas del cliente y el monto solicitado. El Banco <i><b>Águila Real &#xA9 </b></i>se
+        compromete a proporcionar un servicio financiero transparente, adaptándose a las necesidades de cada usuario y
+        promoviendo un acceso responsable al crédito.</p>
 
     <table>
         <tr>
