se ve mejor la página

--- a/bancoapp/web/cartera.html
+++ b/bancoapp/web/cartera.html
@@ -14,20 +14,27 @@
         }
 
         h2 {
+            font-weight: bold;
             color: #333;
             text-align: center;
         }
 
-        h5 {
+        h3 {
+            font-weight: bold;
             text-align: center;
             color: #555;
         }
 
-        /*img {
-          
-        }*/
+        img {
+            margin: 10px 10px 10px 10px;
+            float: left;
+            display: block;
+            margin-right: 20px;
+            border-radius: 10px;
+        }
 
         p {
+            text-align: justify;
             color: #666;
         }
     </style>
@@ -37,7 +44,7 @@
     <h2>Nuestros clientes más destacados</h2>
     <p>En esta sección se mostrará la cartera de clientes más destacados de la institución bancaria.</p>
 
-    <h5>Empresas Chanat &#xA9</h5>
+    <h3>Empresas Chanat &#xA9</h3>
     <img src="https://img.freepik.com/fotos-premium/arquitectura-corporativa-moderna-puede-ver-edificios-oficinas-paisaje-urbano_410516-276.jpg?w=2000"
         alt="Empresas Chanat" width="450" height="300">
     <p>Empresas Chanat &#xA9 es una empresa dedicada a la producción y comercialización de productos alimenticios.</p>
@@ -54,8 +61,9 @@
         producción de alimentos, así como el desarrollo de nuevos productos que respondan a las necesidades del
         consumidor actual. Esta asociación no solo busca incrementar la rentabilidad de Chanat&#xA9, sino también
         aportar al desarrollo económico de la región al generar empleo y fomentar el consumo local.</p>
+    <br>
 
-    <h5>Jang Wonyoung</h5>
+    <h3>Jang Wonyoung</h3>
     <img src="https://th.bing.com/th/id/OIP.K0rKuRjGQblj4r7QjFwrEAHaEK?rs=1&pid=ImgDetMain" alt="wonyoung" width="480"
         height="250">
     <p>Famosa empresaria y modelo con múltiples inversiones en la bolsa de <b>ÁGUILA REAL &#xA9</b></p>
@@ -70,7 +78,7 @@
         que también subraya su capacidad para diversificar sus intereses profesionales, asegurando así un futuro
         próspero tanto en el entretenimiento como en el mundo financiero.</p>
 
-    <h5>Empresas Mahawan &#xA9</h5>
+    <h3>Empresas Mahawan &#xA9</h3>
     <img src="https://images.pexels.com/photos/16628628/pexels-photo-16628628/free-photo-of-ciudad-panorama-urbano-skyline-rascacielos.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
         alt="empresa" width="200" height="300">
     <p>Una empresa dedicada al turismo y a la hoteleria</p>
