--- a/bancoapp/web/inversión.html
+++ b/bancoapp/web/inversión.html
@@ -56,6 +56,26 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             height: 20px;
         }
+
+        input[type="button"] {
+            background-color: #4CAF50;
+            /* verde difrenete */
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 12px;
+        }
+
+        input[type="button"]:hover {
+            background-color: white;
+            color: #4CAF50;
+        }
     </style>
 </head>
 
