--- a/bancoapp/web/tarjetas.html
+++ b/bancoapp/web/tarjetas.html
@@ -25,6 +25,8 @@
         }
 
         img {
+            height: 200px;
+            width: 300px;
             display: block;
             margin: 20px auto;
             border-radius: 10px;
@@ -58,6 +60,7 @@
         }
 
         p {
+            text-decoration: wavy;
             text-align: center;
         }
     </style>
@@ -92,18 +95,40 @@
     </table>
 
     <h2>Magazine</h2>
-    <p>Cuenta con todo es apta para los descuentos y muchos descuentos con amplia covertura. <br>
-        En tiendas departamentales y boutiques <b>Feather &#xA9</b> un descuento del 50%</p>
+    <img src="https://media.canva.com/v2/image-resize/format:JPG/height:600/quality:92/uri:ifs%3A%2F%2F%2F43884b1b-b7fb-4e1c-9d1f-b74ffd9e7f78/watermark:F/width:800?csig=AAAAAAAAAAAAAAAAAAAAACr6IbLpkyf-S8uMCajvdWojjunOnPvSRQFPEGlXy50d&exp=1744758536&osig=AAAAAAAAAAAAAAAAAAAAAGf3e4k5FjqFI05kCDrPktnteBDjkbmUYkZ9XL0H3hMO&signer=media-rpc&x-canva-quality=screen"
+        alt="tarjeta magazine">
+    <p>La tarjeta Magazine es ideal para quienes buscan aprovechar descuentos exclusivos con una amplia cobertura.
+        Permite disfrutar de beneficios excepcionales, como un descuento del 50% en tiendas departamentales y boutiques
+        <i><b>Feather &#xA9 </b></i>, lo que la convierte en una herramienta indispensable para los compradores
+        frecuentes. Además, su cobertura integral garantiza acceso a una gran variedad de establecimientos, facilitando
+        una experiencia de compra placentera y económica. Magazine combina conveniencia y ahorro en una tarjeta que está
+        diseñada para satisfacer las necesidades de los consumidores exigentes, asegurando que cada compra sea una
+        oportunidad de maximizar los recursos personales.
+    </p>
 
     <h2>BulletProof</h2>
-    <p>Cuenta con todo es apta para los descuentos y aprueba de quincenas que nada te límite a comprar. <br>
-        Acceso a los aeropuertos<b> Sky Eagle &#xA9 </b>sala VIP y a los hoteles más exclusivos</p>
+    <img src="https://media.canva.com/v2/image-resize/format:JPG/height:600/quality:92/uri:ifs%3A%2F%2F%2Ff98e08c2-2cea-4085-8ac1-13219e025dc1/watermark:F/width:800?csig=AAAAAAAAAAAAAAAAAAAAAG-qpC_PIEIrAdVDBkTzb3ECl7QBys3EiCZZ61W1t7yc&exp=1744760824&osig=AAAAAAAAAAAAAAAAAAAAAFRoswBS4TMhtL-nrggLsdmlBxacnjiaWhwFL7tKC9vg&signer=media-rpc&x-canva-quality=screen"
+        alt="tarjeta bullet proof">
+    <p>La tarjeta BulletProof ofrece una experiencia premium, con descuentos atractivos y beneficios únicos que eliminan
+        las limitaciones financieras. Diseñada para quienes disfrutan de un estilo de vida exclusivo, esta tarjeta
+        incluye acceso VIP a la sala <i><b>Sky Eagle &#xA9</b></i> en aeropuertos, garantizando comodidad y lujo
+        mientras se viaja. Asimismo, brinda acceso preferente a los hoteles más exclusivos, asegurando estadías
+        inolvidables. BulletProof combina funcionalidad y distinción para quienes desean superar barreras y disfrutar de
+        lo mejor que la vida tiene para ofrecer, posicionándose como una tarjeta que redefine las expectativas de
+        comodidad y estilo.
+
+    </p>
 
     <h2>Cherry Bullet</h2>
-    <p>Cuenta con inversión del 20% de los fondos por lo tanto es aprueba de quincenas que nada te límite a comprar.
-        <br>
-        Acceso a múltiples centros de diversión y restaurantes como <b>El pollito chicken &#xA9</b> y <b>Rooster
-            &#xA9</b>
+    <img src="https://media.canva.com/v2/image-resize/format:JPG/height:600/quality:92/uri:ifs%3A%2F%2F%2Fa9867dc5-88a2-4503-8b5d-c83b2b97b056/watermark:F/width:800?csig=AAAAAAAAAAAAAAAAAAAAADrGfintAjk1iRnzlk11DvsIujr1mbLC-XPyJMHlXpEl&exp=1744761044&osig=AAAAAAAAAAAAAAAAAAAAAPeVBxGgtmyAqdPtVgoqWvUDWCg2uV1quGzYf0Fl_Jgb&signer=media-rpc&x-canva-quality=screen"
+        alt="tarjeta cherry bullet">
+    <p>La tarjeta de débito Cherry Bullet destaca por ser una opción inteligente para quienes buscan estabilidad
+        financiera y un toque de diversión en sus compras. Con una inversión del 20% de los fondos, fomenta la seguridad
+        y la tranquilidad económica mientras elimina barreras para disfrutar. Además, proporciona acceso exclusivo a
+        múltiples centros de entretenimiento y restaurantes selectos, como <i><b>El Pollito Chicken &#xA9</b></i> y
+        <i><b>Rooster &#xA9</b></i>, que garantizan experiencias únicas. Cherry Bullet es más que una tarjeta; es una
+        herramienta que permite aprovechar al máximo la diversión y el sabor, mientras asegura una administración
+        financiera responsable.
     </p>
 
 </body>
