--- a/bancoapp/web/saldo.html
+++ b/bancoapp/web/saldo.html
@@ -7,29 +7,40 @@
     <link rel="icon" href="descarga.ico" type="image/x-icon">
     <script src="dinero.js"></script>
     <style>
+        body {
+            font-size: 40px;
+            font-weight: bold;
+            background-color: #59cc7f;
+            font-family: Arial, sans-serif;
+            color: #333;
+            text-align: center;
+            padding: 50px;
+        }
 
+        input[type="button"] {
+            font-size: 20px;
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        input[type="button"]:hover {
+            background-color: #ffffff;
+            color: #4CAF50;
+        }
     </style>
     <title>Saldo</title>
 </head>
 
 <body>
     <header>Su saldo actual es de:</header>
-    <script>
-        let moneyElement = document.getElementById('money');
-        let amount = 100;
-
-        function growMoney() {
-            amount += Math.floor(Math.random() * 100); // Incrementa el dinero aleatoriamente
-            moneyElement.textContent = `$${amount}`;
-            moneyElement.style.transform = 'scale(1.2)'; // Efecto de crecimiento
-            setTimeout(() => {
-                moneyElement.style.transform = 'scale(1)'; // Vuelve al tamaño original
-            }, 500);
-        }
-
-        setInterval(growMoney, 1000); // Actualiza cada segundo
-
-    </script>
+    <h2 id="contador">2000</h2>
+    <input type="button" value="Ver incremento" onclick="incrementar()">
+    <script src="incremento.js"></script>
+    <input type="button" value="Regresar" onclick="location.href='home.html'">
 </body>
 
 </html>
